# orql-framework

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  firestore.rules  package.json  pyproject.toml  requirements-dev.txt  setup.py  split-web-files.sh
.github/workflows/: deploy.yml
examples/: basic_demo.py
src/core/: __init__.py  observer.py  quantum_state.py  sequencer.py  xi_field.py
tests/: __init__.py  test_observer.py
web/: about.html  contact-debug.html  contact.html  index.html  paper.html  playground.html
web/components/: footer.html  navbar.html
web/css/: about.css  contact.css  paper.css  style.css
web/js/: components.js  contact-community.js  firebase-config.js  orql-core.js  simulation.js  stats-manager.js  test-firebase-connection.js  ui.js
